# file-validation

./: LICENSE  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/file_validation/: PKG-INFO  requires.txt
